--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script type='text/javascript' src='../Users/myUserName/Desktop/myPage.js'></script>
   </script>
 </body>
