--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <div id="main"></div>
   <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-  <script type='text/javascript' src='../Users/myUserName/Desktop/myPage.js'></script>
+  <script type='text/javascript' src='../js/index.js'></script>
   </script>
 </body>
