--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <body>
-  <div id="main"></div>
+  <div id="pst"></div>
   <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
   <script type='text/javascript' src='/js/index.js'></script>
