--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <h1>Testing crap</h1>
   <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-  <script type='text/javascript' src='/js/index.js'></script>
+  <script src='/index.js'></script>
   <script></script>
 </body>
